--- a/todo.txt
+++ b/todo.txt
@@ -2,7 +2,16 @@
 -> print_err function check. I've changed function but did not change the parameter of some funcs.
 -> do not forget to open signals
 
+-> `cd` with an non exist file; (on linux, not tried on macos)
+	it prints -> `minishell: a: Operation not permitted`
+	should be -> `bash: cd: a: No such file or directory`
 
--> /bin/echo test1		test2
-	it prints -> "test1		test2"
-	should be -> "test1 test2"
+-> `cd` with multiple arguments error, it gives error on linux but not on macos
+	cd $PWD hi
+	bash: cd: too many arguments
+
+Test 140: ❌ test_files
+mini exit code = 126
+bash exit code = 127
+mini error = (test_files No such file or directory )
+bash error = ( command not found)
